# emscripten-cpp-cmake-template

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  README.md  index.html  myapp.js  myapp.wasm
.github/workflows/: MyApp.yml  MyLib.yml
MyApp/: CMakeLists.txt
MyApp/benchmarks/: CMakeLists.txt
MyApp/src/: CMakeLists.txt  main.cpp
MyApp/src/MyApp/: Game.cpp  Game.hpp
MyApp/tests/: CMakeLists.txt  main.cpp  myapp.hpp
MyLib/: CMakeLists.txt
MyLib/benchmarks/: CMakeLists.txt  main.cpp
MyLib/src/: CMakeLists.txt
MyLib/src/MyLib/: Library.cpp  Library.hpp
MyLib/tests/: CMakeLists.txt  main.cpp  mylib.hpp
cmake/: CPPCheck.cmake  CheckIsRoot.cmake  ClangFormat.cmake  ClangTidy.cmake  CodeCoverage.cmake  CompilerWarnings.cmake  ConfigureTarget.cmake  DownloadCPM.cmake  FetchDoctest.cmake  FetchGLAD.cmake  FetchGoogleBenchmark.cmake  FetchIMGUI.cmake  FetchSDL2.cmake  SanitizeAddress.cmake  SanitizeLeaks.cmake  SanitizeThreads.cmake  SanitizeUndefinedBehaviour.cmake  SetSystemIncludes.cmake  Valgrind.cmake
dependencies/: CMakeLists.txt
dependencies/glad/: glad.c  glad.h
scripts/: filter-compile-commands.py  run-clang-tidy.py
